bundle-hub/manifests/kmm-operator-hub-controller-metrics-service_v1_service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: metrics-service-cert
  creationTimestamp: null
  labels:
    app.kubernetes.io/component: kmm-hub
    app.kubernetes.io/name: kmm-hub
    app.kubernetes.io/part-of: kmm
    control-plane: controller
  name: kmm-operator-hub-controller-metrics-service
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: metrics
  selector:
    control-plane: controller
status:
  loadBalancer: {}
